2011-02-26  Mark Grondona <mgrondona@llnl.gov>

	* doc/dshbak.1 :
	  Document -d and -f options.

	* scripts/dshbak :
	  Support writing output to a file per host based on
	  Alexander Bandura's dshdir(1) utility. Thanks to
	  Michael Shigorin for the suggestion.

2011-02-25  Mark Grondona <mgrondona@llnl.gov>

	* doc/dshbak.1 :
	  Update and reformat dshbak manpage.

	* scripts/dshbak :
	  Improve usage message and add -h option.

	* scripts/dshbak :
	  Avoid pointless dereference of $lines in call to &cmp_list.

	* scripts/dshbak :
	  Add 'use strict' and fix errors.

	* scripts/dshbak :
	  Add -w to perl invocation and fix warnings.

	* scripts/dshbak :
	  Add Copyright header.

2011-02-15  Mark Grondona <mgrondona@llnl.gov>

	* tests/t0006-pdcp.sh :
	  Add sanity checks for pdcp/rpdcp functionality.

2011-02-14  Mark Grondona <mgrondona@llnl.gov>

	* tests/t0006-pdcp.sh :
	  Add basic functionality test for pdcp and rpdcp.

	* tests/test-modules/a.c, tests/test-modules/b.c :
	  Remove PCP flag from misc/A and misc/B test modules.

	* tests/test-modules/pcptest.c, tests/test-modules/Makefile.am,
	  tests/test-modules/Makefile.in :
	  Add test rcmd module for use in testing {r}pdcp functionality.

2011-02-12  Mark Grondona <mgrondona@llnl.gov>

	* tests/t0004-module-loading.sh :
	  Fixup pattern check in module load tests to be more robust.

2011-02-11  Mark Grondona <mgrondona@llnl.gov>

	* tests/t0006-pdcp.sh :
	  Add some simple pdcp tests.

	* src/pdsh/dsh.c, src/pdsh/opt.c, src/pdsh/opt.h :
	  Allow PDSH_REMOTE_PDCP_PATH environment variable to set default
	  value for -e / remote pdcp path. Fix for gogole code Issue 7.

	* tests/t0004-module-loading.sh :
	  Ensure that test modules are built before running tests.
	  Test that -M overrides PDSH_MISC_MODULES env var.

2010-10-27  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/genders.c :
	  Allow -g to be used with -w to filter a list of wcoll
	  hosts via a genders attribute.
